# dioxus-book

./: Cargo.toml  Readme.md
book-compiler/: Cargo.toml
book-compiler/src/: compiler.rs  lib.rs  meta.rs  rsx.rs  transform_book.rs
book-tool/: Cargo.toml
book-tool/src/: query.rs  summary.rs
examples/: build_book.rs
examples/book/: book.rs  book.toml
examples/book/src/: SUMMARY.md  chapter.md
examples/book/src/sub/: sub.md
src/: lib.rs
