[package]
name = "book-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
log = "0.4.22"
memchr = "2.7.4"
pulldown-cmark = "0.12.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
toml = "0.8.19"
bytes = { version = "1.9.0", features = ["serde"] }
slab = "0.4.9"

[target.'cfg(arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[features]
